Add images and change image path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.16)
 
 project(DeviceStorage VERSION 0.1 LANGUAGES CXX)
 
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Core Gui Widgets QuickControls2)
@@ -13,6 +15,7 @@ qt_add_executable(appDeviceStorage
     main.cpp
     fdevice.h fdevice.cpp
     fdeviceloader.h fdeviceloader.cpp
+    images.qrc
 
 )
 
